--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         </span>
                     </h1>
                     <h2 class="text-secondary font-medium text-lg mb-5">
-                        student
+                        athelete
                     </h2>
                     <p class="text-secondary font-mediium mb-10">
                         <span class="text-dark font-semibold">Website</span> ini dibuat untuk portofolio saya
