--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
-                        <img src="src/novira.jpg" alt="foto?" width="300px" class="max-w-full mx-auto">
+                        <img src="src/foto_novira-removebg-preview.jpg" alt="foto?" width="300px" class="max-w-full mx-auto">
                     </div>
                 </div>
             </div>
